--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,10 @@ gitpython
 hachoir
 heroku3
 motor
+numpy
 pillow
 psutil
-py-tgcalls==0.9.8
+py-tgcalls==0.9.7
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
